--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "holiday-site-vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "DigbyCeaser <4f7baea1@opayq.com>",
+  "author": "raythompsonwebdev <ray_thomp@hushmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -48,8 +48,9 @@
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
+    "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-hot-middleware": "^2.18.0",
