--- a/.gitignore
+++ b/.gitignore
@@ -49,16 +49,18 @@ Temporary Items
 LICENSE.md
 node_modules/
 Files/
-static
+
 CHANGELOG.md
 CONTRIBUTING.md
 .project
 index.html
-src/sass-files/
+
 src/partials/.sass-cache/
 src/assets/js/templatemo custom.js
-src/vendor/
 src/npm-debug.log
 src/assets/images/
 src/assets/fonts/
 src/assets/icons/
+dist/static/images/
+
+
