--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Travel Agency",
-  "description": "Vue. js App",
+  "name": "travel-agency",
+  "description": "Travel Agency Vue.js app",
   "repository": "https://github.com/raythompsonwebdev/Holiday-Site-Vue",
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "vuejs", "heroku"],
